word wrap fix

--- a/TwitterBot/css/main.css
+++ b/TwitterBot/css/main.css
@@ -45,3 +45,7 @@
 .fa-toggle-on {
     color: #007bff;
 }
+
+.wrapped {
+    word-wrap: break-word;
+}
